<resources>
    <string name="app_name">PokemonAPP</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="settings">Ajustes</string>
    <string name="captured_pokemon">Pokémon Capturado</string>
    <string name="pokedex">Pokédex</string>
    <string name="about">Acerca de</string>
    <string name="language">Idioma</string>
    <string name="logout">Cerrar sesión</string>
    <string name="email">Correo</string>
    <string name="password">contraseña</string>
    <string name="registro">Si no tienes cuenta, regístrese aquí !</string>
    <string name="captured">Capturados</string>
    <string name="ajustes">Ajustes</string>
    <string name="permisoseliminar">Permitir eliminar Pokemons capturados</string>
    <string name="cambiolenguaje">Cambiar idioma a Ingles</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="habilitadelete">Eliminacion de Pokemon habilitada</string>
    <string name="deshabilitadelete">Eliminacion de Pokemon Deshabilitada</string>
    <string name="desarrollo">APP de Pokemon desarrollada por Juan José Zamorano. Version 0.0.3</string>
    <string name="cerrar">Cerrar</string>
    <string name="sesioncerrada">Sesion Cerrada</string>
    <string name="errordecarga">Error al cargar Pokemon capturados</string>
    <string name="indicepok">Índice</string>
    <string name="tipopok">Tipo(s)</string>
    <string name="pesopok">Peso</string>
    <string name="alturapok">Altura</string>
    <string name="eliminapokemon">Eliminar Pokemon</string>
    <string name="confirmaeliminacion">¿Está seguro que desea eliminar a</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="pokemoneliminado">Pokemon Eliminado</string>
    <string name="erroreliminarpokemon">Error al eliminar el Pokemon</string>
    <string name="noseencuentra">No se pudo encontrar el Pokemon en BBDD</string>
    <string name="errorbbdd">Error al acceder a BBDD</string>
    <string name="pokcapturado">¡ Pokemon Capturado !</string>
    <string name="notifycorreo">Introduce un correo</string>
    <string name="notifypass">Introduce una contraseña</string>
    <string name="accesotoast">Accediendo como :</string>
    <string name="accesoerrortoast">Acceso incorrecto</string>
    <string name="errorcargapokedex">Error al cargar la Pokédex</string>
    <string name="errorcapturapokemon">Error al capturar el Pokemon</string>
    <string name="errorcargacapturados">Error al cargar Los Pokemons capturados</string>
    <string name="default_web_client_id">682507082593-8dl50hivpsoh6vhqduq9i9q6ccr70nms.apps.googleusercontent.com</string>
    <string name="passcorto">La contraseña debe tener al emnos 6 caracteres</string>
    <string name="registroOK">Registro Exitoso</string>
    <string name="registroNOOK">Error en el registro :</string>
    <string name="falloaccesogoogle">No se pudo acceder mediente google</string>
    <string name="exitoaccesogoogle">Acceso correcto con Google</string>
</resources>
